cmake_minimum_required(VERSION 3.0)
project(todogen)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(todogen todogen/Generator.cpp todogen/LangDef.cpp todogen/SourceBrowser.cpp todogen/SourceFile.cpp todogen/TodoItem.cpp todogen/Main.cpp todogen/ProgramOptions.cpp)
set_target_properties(todogen PROPERTIES OUTPUT_NAME "todogen.elf")
set(CMAKE_MFC_FLAG 1) 

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "8")
    message(FATAL_ERROR "GCC 8+ Required")
  endif()
endif()